src/views/product-integrations-landing/components/integrations-list/style.module.css
.integrationCard {
	& .cardContent {
		display: flex;
		justify-content: space-between;

		@media (max-width: 800px) {
			flex-direction: column;
		}
	}

	& .left {
		max-width: 527px;
		display: flex;
		flex-direction: column;
		justify-content: space-between;

		& .nameVersionWrapper {
			display: flex;
			align-items: center;
			justify-content: flex-start;
			flex-grow: 1;
		}
	}

	& .right {
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: flex-end;
		min-width: 200px;

		@media (max-width: 800px) {
			margin-top: 14px;
			align-items: flex-start;
			min-width: unset;
		}

		& .tagList {
			justify-content: flex-end;
			margin-bottom: 14px;

			@media (max-width: 800px) {
				margin-bottom: 0;
				justify-content: flex-start;
			}
		}

		& .viewDetails {
			flex-shrink: 0;
			font-size: 14px;
			display: flex;
			align-items: center;
			justify-content: flex-end;

			@media (max-width: 800px) {
				margin-top: 32px;
			}

			& > svg {
				margin-left: 8px;
			}
		}
	}
}

.version {
	composes: hds-typography-body-100 from global;
	color: var(--token-color-foreground-faint);
	font-weight: var(--token-typography-font-weight-medium);
	margin-left: 8px;
}

.heading {
	composes: hds-typography-body-200 from global;
	color: var(--token-color-foreground-strong);
	font-weight: var(--token-typography-font-weight-semibold);
}

.organization {
	composes: hds-typography-body-100 from global;
	color: var(--token-color-foreground-faint);
	font-weight: var(--token-typography-font-weight-medium);
	display: flex;
	margin-bottom: 10px;
}

.body {
	composes: hds-typography-body-100 from global;
	color: var(--token-color-foreground-faint);
}

